--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-Mner ini ada perombakan besar-besaran dari yg UTS krna klompok so nd ada yg ba bkin jdi kita buat sndri punya, tu yg UTS nd se lanjut, jadi kita buat dari awal ulang
+Mner ini ada perombakan besar-besaran dari yg UTS krna klompok so nd ada yg ba bkin jdi kita buat sndri punya, tu yg UTS nd se lanjut, jadi kita buat dari awal ulang.
+
+
+untuk password dan username silahkan mner buat saja baru dan login dengan pass dg username yg telah mner buat krna itu langsung tersimpan di database
